--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     function loadLevel() {
         
-        fetch('C:\Users\pedro\Documents\Trab 2\Trabalho-2---Back-end\level.json')
+        fetch('https://raw.githubusercontent.com/Pedrolaires/Trabalho-2---Back-end/refs/heads/main/level.json')
             .then(response => response.json())
             .then(json => {
                 levelData = json;
